# Context-to-localLLM

./: README.md
ifl_core/: .gitignore  Cargo.toml  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_output_5.txt  check_output_6.txt  check_output_7.txt  check_output_8.txt  example_output.txt  test_all_output.txt  test_all_output_2.txt  test_clean.txt  test_error.txt  test_output.txt  test_output_2.txt  test_output_cmd.txt  test_output_confidence.txt  test_output_debug.txt  test_output_paste.txt  test_output_snapshot.txt  test_output_snapshot_debug_2.txt  test_output_snapshot_full.txt
ifl_core/examples/: llm_connect.rs  simple_usage.rs
ifl_core/gui/: Cargo.toml  models.json
ifl_core/gui/src/: main.rs
ifl_core/src/: api.rs  event.rs  feature.rs  lib.rs  llm_client.rs  main.rs  profile.rs  rules.rs
ifl_core/tests/: scenarios.rs
