[package]
name = "ifl_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.4", features = ["desktop"] }
dioxus-desktop = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ifl_core = { path = "../" }
